--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "timestamp-microservice",
-  "version": "1.0.0",
-  "description": "FreeCodeCamp Timestamp Microservice",
+  "name": "shorturl",
+  "version": "0.0.3",
+  "description": "API project for freeCodeCamp",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "cors": "^2.8.5"
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongodb": "^6.2.0",
+    "mongoose": "^7.6.3",
+    "shortid": "^2.2.16"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
